--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -112,7 +112,7 @@
       transform: scaleX(2.5) scaleY(0.75);
     }
     &:after {
-      border-color: transparent #2eace0 transparent transparent;
+      border-color: transparent var(--color-dark-blue-color) transparent transparent;
       left: -30px;
     }
   }
@@ -143,7 +143,7 @@
     transform: scaleY(2.5) scaleX(0.75);
   }
   &:after {
-    border-color: transparent transparent #2eace0 transparent;
+    border-color: transparent transparent var(--color-dark-blue-color) transparent;
     top: -30px;
   }
 }
