fix: replace hex color with css var in pass-prompt-input id

--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -86,7 +86,7 @@
       #password-prompt-input {
         width: 100%;
         color: var(--color-white-color);
-        background-color: #2e2e2e;
+        background-color: var(--color-darker-gray-color);
         margin-top: 2 * $session-margin-lg;
         padding: var(--margins-xs) var(--margins-lg);
         outline: none;
