fix: address PR reviews

--- a/stylesheets/_session_left_pane.scss
+++ b/stylesheets/_session_left_pane.scss
@@ -71,7 +71,7 @@ $session-compose-margin: 20px;
 }
 
 .module-left-pane {
-  width: $session-left-pane-width;
+  width: var(--left-pane-list-width);
   position: relative;
   height: 100vh;
   flex-shrink: 0;
