fix: address reviews comment

--- a/stylesheets/_session_signin.scss
+++ b/stylesheets/_session_signin.scss
@@ -178,7 +178,7 @@
   &-description-long {
     padding-top: 0;
     padding-bottom: 20px;
-
+    // TODO Theming needs to be updated
     color: rgba(black, 0.6);
     text-align: center;
     font-size: 12px;
