--- a/stylesheets/_session_left_pane.scss
+++ b/stylesheets/_session_left_pane.scss
@@ -13,30 +13,31 @@ $session-compose-margin: 20px;
   }
 
   &-list-item {
+    background: var(--conversation-tab-background-color);
     transition: var(--default-duration);
 
     &:hover {
-      background: var(--color-clickable-hovered);
+      background: var(--conversation-tab-background-hover-color);
     }
 
     &--is-selected {
-      background: var(--color-conversation-item-selected);
+      background: var(--conversation-tab-background-selected-color);
 
       .module-conversation__user__profile-number,
       .module-conversation__user__profile-name,
       .module-conversation-list-item__message__text {
-        color: var(--color-text);
+        color: var(--conversation-tab-text-selected-color);
       }
     }
 
     &--has-unread {
-      border-left: var(--border-unread);
-      background: var(--color-conversation-item-has-unread);
+      background: var(--conversation-tab-background-unread-color);
+      border-left: 4px solid var(--conversation-tab-color-strip-color);
     }
 
     &__unread-count {
-      color: var(--color-text);
-      background: var(--color-clickable-hovered);
+      background: var(--conversation-tab-bubble-background-color);
+      color: var(--conversation-tab-bubble-text-color);
 
       position: static !important;
       font-weight: 700 !important;
@@ -52,9 +53,9 @@ $session-compose-margin: 20px;
     }
 
     &__message__text {
-      color: var(--color-light-gray-color);
+      color: var(--conversation-tab-text-color);
       &--has-unread {
-        color: var(--color-text);
+        color: var(--conversation-tab-text-unread-color);
       }
     }
 
@@ -65,7 +66,7 @@ $session-compose-margin: 20px;
 
     &__header__name--with-unread .module-conversation__user__profile-number,
     &__header__name--with-unread .module-conversation__user__profile-name {
-      color: var(--color-text);
+      color: var(--conversation-tab-text-unread-color);
     }
   }
 }
@@ -98,7 +99,7 @@ $session-compose-margin: 20px;
   }
 
   &-overlay {
-    background: var(--color-left-pane-overlay-background);
+    background: var(--background-primary-color);
 
     display: flex;
     flex-direction: column;
@@ -164,10 +165,6 @@ $session-compose-margin: 20px;
     margin-top: 10px;
     width: 250px;
     filter: var(--filter-session-text);
-
     transition: 0s;
-    .path {
-      fill: red;
-    }
   }
 }
