--- a/stylesheets/_avatar.scss
+++ b/stylesheets/_avatar.scss
@@ -9,6 +9,7 @@
   img {
     object-fit: cover;
     border-radius: 50%;
+    // TODO Theming update
     border: 1px solid var(--color-avatar-border-color);
   }
 }
