--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -178,6 +178,7 @@
     position: relative;
 
     .module-avatar {
+      // TODO Theming update
       box-shadow: 0px 0px 13px 0.5px var(--color-session-shadow);
     }
 
