feat: made more progress with left pane and left more comments

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -894,7 +894,7 @@
 
 .module-typing-animation__dot {
   border-radius: 50%;
-  background-color: var(--color-gray-color);
+  background-color: var(--text-secondary-color);
 
   height: 6px;
   width: 6px;
@@ -903,7 +903,7 @@
 
 .module-typing-animation__dot--light {
   border-radius: 50%;
-  background-color: var(--color-white-color);
+  background-color: var(--background-primary-color);
 
   height: 6px;
   width: 6px;
