--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -874,7 +874,7 @@ input {
     }
 
     &-disabled {
-      border: 1px solid var(--color-darker-gray-color) !important;
+      border: 1px solid var(--border-color) !important;
     }
   }
 }
