feat: updated all session buttons to use new button
small style fixes and sass cleanup

--- a/stylesheets/_session_left_pane.scss
+++ b/stylesheets/_session_left_pane.scss
@@ -133,6 +133,7 @@ $session-compose-margin: 20px;
     }
 
     .session-button {
+      min-width: 160px;
       width: fit-content;
       margin-top: 1rem;
       margin-bottom: 3rem;
