feat: updated danger color setup
updated inbox color and added modal colors to SessionTheme

--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -78,8 +78,8 @@
 }
 
 .inbox {
-  background: var(--color-inbox-background);
-  color: var(--color-text);
+  background: var(--background-primary-color);
+  color: var(--text-primary-color);
 }
 
 .conversation {
