--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -224,32 +224,16 @@ label {
 }
 
 .Toastify__toast {
-  background: var(--color-cell-background);
-  color: var(--color-text);
+  background: var(--modal-background-color);
+  color: var(--modal-text-color);
+  border-left: 4px solid var(--primary-color);
 
   .Toastify__close-button {
-    color: subtle(var(--color-text));
-  }
-  @mixin set-toast-theme($color) {
-    border-left: 4px solid $color;
-  }
-  &--success {
-    /* TODO is this correct? */
-    @include set-toast-theme(var(--color-session-green-color));
-  }
-  &--info {
-    @include set-toast-theme(var(--color-darker-gray-color));
-  }
-  &--warning {
-    @include set-toast-theme(var(--color-warning));
-  }
-  &--error {
-    /* TODO is this correct?*/
-    @include set-toast-theme(var(--color-warning));
+    color: var(--modal-text-color);
   }
 
   .Toastify__progress-bar {
-    background-color: rgba(var(--color-text-rgb), 0.1);
+    background-color: var(--toast-progress-color);
   }
 }
 
