--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -127,7 +127,7 @@ textarea {
   font-size: $session-font-md;
 
   &-text {
-    color: var(--color-text-subtle);
+    color: var(--text-primary-color);
     font-weight: 400;
     font-size: $session-font-sm;
     line-height: $session-font-sm;
