--- a/stylesheets/_session_theme.scss
+++ b/stylesheets/_session_theme.scss
@@ -3,7 +3,7 @@
   background: none !important;
 }
 .module-conversation-header {
-  background: var(--color-cell-background);
+  background: var(--background-primary-color);
 }
 
 .module-message {
