feat: created color variable for session text logo

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -254,7 +254,7 @@ $loading-height: 16px;
     }
   }
   .session-text-logo {
-    filter: brightness(0) saturate(100%);
+    filter: var(--session-logo-text-current-filter);
   }
 }
 
