--- a/stylesheets/_session_password.scss
+++ b/stylesheets/_session_password.scss
@@ -22,23 +22,18 @@
       justify-content: center;
       align-items: center;
 
-      background-color: var(--color-black-color);
-
       width: 100%;
       height: 100%;
 
-      padding: 3 * $session-margin-lg;
+      padding: calc(3 * var(--margins-lg));
     }
 
     &-error-section {
       width: 100%;
-      color: white;
-      margin: -var(--margins-sm) 0px 2 * $session-margin-lg 0px;
+      color: var(--text-primary-color);
+      margin: -var(--margins-sm) 0px calc(2 * var(--margins-lg)) 0px;
 
       .session-label {
-        &.primary {
-          background-color: rgba(var(--color-dark-gray-color-rgb), 0.3);
-        }
         padding: var(--margins-xs) var(--margins-sm);
         text-align: center;
       }
@@ -46,7 +41,7 @@
 
     &-container {
       font-family: $session-font-default;
-      color: white;
+      color: var(--text-primary-color);
       display: inline-flex;
       flex-direction: column;
       align-items: center;
@@ -54,10 +49,10 @@
 
       width: 600px;
       min-width: 420px;
-      padding: 3 * $session-margin-lg 2 * $session-margin-lg;
+      padding: calc(3 * var(--margins-lg)) calc(2 * var(--margins-lg));
       box-sizing: border-box;
-      background-color: var(--color-darkest-gray-color);
-      border: 1px solid var(--color-darker-gray-color);
+      background-color: var(--background-secondary-color);
+      border: 1px solid var(--border-color);
       border-radius: 2px;
 
       .warning-info-area,
@@ -67,7 +62,7 @@
         align-items: center;
 
         h1 {
-          color: white;
+          color: var(--text-primary-color);
         }
         svg {
           margin-inline-end: var(--margins-lg);
@@ -85,13 +80,13 @@
 
       #password-prompt-input {
         width: 100%;
-        color: var(--color-white-color);
-        background-color: var(--color-darker-gray-color);
-        margin-top: 2 * $session-margin-lg;
+        background-color: var(--text-box-background-color);
+        color: var(--text-box-text-user-color);
+        margin-top: calc(2 * var(--margins-lg));
         padding: var(--margins-xs) var(--margins-lg);
         outline: none;
-        border: none;
-        border-radius: 2px;
+        border: 1px solid var(--border-color);
+        border-radius: 7px;
         text-align: center;
         font-size: 24px;
         letter-spacing: 5px;
