fix: address regression tests UI issues

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -319,7 +319,7 @@ pre {
   overflow: hidden;
   min-width: 30px;
   // To limit messages with things forcing them wider, like long attachment names
-  max-width: calc(100vw - 380px - 100px);
+  max-width: 100%;
   align-items: center;
 }
 label {
@@ -793,7 +793,7 @@ label {
       align-items: center;
 
       max-width: 90%;
-      width: 600px;
+      min-width: 400px;
 
       background: var(--color-cell-background);
       color: var(--color-text);
